[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Snoop's Swords (Pack 1)/1px/25.png" type="Texture" id=1]
[ext_resource path="res://sword.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 7.5 )

[node name="sword" type="Area2D" groups=["damage_enemy"]]
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 14.3184, 0.261616 )
rotation = 1.57586
scale = Vector2( 0.552405, 0.596662 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24.5, 5.42981e-06 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="attack_delay" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="attack_delay" to="." method="_on_attack_delay_timeout"]
